@startuml main

'
' SETTINGS
'

hide circle

skinparam DefaultFontName Monospaced
skinparam DefaultFontSize 16
skinparam DefaultFontStyle plain

'
' ENTITIES
'

entity "Lesson" as lesson
{
	skillLevel NOT NULL
}

entity "LessonPayment" as lessonPayment
{
	skillLevel      NOT NULL
	lessonType      NOT NULL
	timeOfLesson    NOT NULL
	siblingDiscount NOT NULL
}

entity "Individual" as lessonIndividual
{
	instrumentFocus NOT NULL
}

entity "MultiplePeople" as lessonMultiplePeople
{
	numberOfPlacesMinimum 1..* NOT NULL
	numberOfPlacesMaximum 1..* NOT NULL
}

entity "Group" as lessonGroup
{
	instrumentFocus NOT NULL
}

entity "Ensemble" as lessonEnsemble
{
	genre NOT NULL
}

entity "Appointment" as appointment
{
	studentId    NOT NULL
	instructorId NOT NULL
	startTime    NOT NULL
	duration     NOT NULL
}

entity "TimeSlot" as timeSlot
{
	startTime NOT NULL
	duration  NOT NULL
}

entity "Person" as person
{
	personNumber UNIQUE
	firstName  NOT NULL
	lastName   NOT NULL
}

entity "Address" as address
{
	city    NOT NULL
	zipCode NOT NULL
	street  NOT NULL
}

entity "ContactDetails" as contact
{
	email       NOT NULL
	phoneNumber NOT NULL
}

entity "Student" as student
{
	studentId UNIQUE NOT NULL
	siblings             0..*
	contactPersons       0..*
}

entity "Instructor" as instructor
{
	instructorId            UNIQUE NOT NULL
	instrumentsProficientWith 1..* NOT NULL
}

entity "InstrumentStock" as instrumentStock
{
	instrumentId   UNIQUE NOT NULL
	instrumentType        NOT NULL
	brand                 NOT NULL
	quantity 0..*         NOT NULL
}

entity "Rental" as rental
{
	rentalId          UNIQUE NOT NULL
	leaseMonths 1..12        NOT NULL
}

entity "RentalPayment" as rentalPayment
{
	rentalId     NOT NULL
	timeOfRental NOT NULL
}

'
' RELATIONS
'

lesson --|> lessonIndividual

lesson --|> lessonMultiplePeople

lessonMultiplePeople --|> lessonGroup

lessonMultiplePeople --|> lessonEnsemble

person --|> student

person --|> instructor

person "1" - "1" address : lives at >

contact "1" - "1" person : used to contact >

student "1" --- "0..*" lesson : attends >

student "1" -- "0..2" rental : rents >

student "1" -- "0..*" lessonPayment : pays >

student "1" --- "0..2" rentalPayment : pays >

instructor "1" -- "0..*" lessonPayment : receives >

instructor "1" --- "0..*" lesson : holds >

instrumentStock "1" -- "0..*" rental : rents out >

appointment "1" - "1" lessonIndividual : schedules >

timeSlot "1" - "1" lessonMultiplePeople : schedules >

'
' NOTES
'

note as N1
	Attributes have a cardinality of 0..1 unless specified otherwise

	The attributes of payment entities
	(**LessonPayment** and **RentalPayment**)
	are used to calculate the final cost of the payment.
	Since the price is derived from the other attributes
	we avoid having to explicitly store the it.
end note

note right of lesson
	The different skill levels:
	- Beginner
	- Intermediate
	- Advanced
end note

note right of lessonPayment
	Sibling discount
	does not affect
	payment of the
	instructor.
end note

note right of rentalPayment
	**rentalId** will not have to be unique
	to account for cases where a student
	misses to pay for an instrument
	multiple months in a row.
end note

note top of student
	Contact persons are stored as their person number.
	With that you can retrieve their information.
end note

@enduml
